Add 2 more converted tests, but these ones fail and are left @Disabled